# EmbeddedRustExperiments

./: README.md
Documentation/: LearningTopics.md  Notes.md
nucleo/: Cargo.toml
nucleo/.cargo/: config.toml
nucleo/src/: main.rs  ring_buffer.rs
