[package]
authors = ["Andreas Thielmann <thielmann.andreas@googlemail.com>"]
edition = "2018"
readme = "README.md"
name = "nucleo"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
defmt-rtt = "0.4"
embedded-hal = "1.0.0"
nb = "1.1.0"

[dependencies.stm32f1]
version = "0.15.1"
features = ["stm32f103"]

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "nucleo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
